--- a/style.css
+++ b/style.css
@@ -1,8 +1,21 @@
 body {
   font-family: Arial, sans-serif;
 }
+html {
+  font-size: 15px;
+  /*font-size: 62.5%;*/
+}
 #image {
-  background-image: ;
+  background-image: url(challenges.jpg);
+  height: 10rem;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  color: wheat;
 }
 h1,
 h2,
@@ -22,27 +35,64 @@ article:hover {
 }
 footer {
   background-color: green;
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+}
+header p {
+  margin-right: 1rem;
 }
 #ftr {
   text-align: center;
   margin: 10;
   padding: 10;
 }
-nav ul {
-  list-style-type: none;
-  margin: 10;
-  padding: 0;
+header {
+  width: 100%;
+}
+.container {
+  display: grid;
+  gap: 1rem;
+}
+@media (max-width: 899px) {
+  #img {
+    max-width: 100%;
+  }
+  nav {
+    flex-direction: column;
+    align-items: stretch;
+    width: 100%;
+  }
+  .container {
+    grid-template-columns: 1fr;
+  }
+}
+@media (min-width: 900px) {
+  nav {
+    flex-direction: row;
+  }
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+    /*display: grid;
+    grid-template-columns: 3fr 1 fr;
+    grid-template-rows: 1fr 1fr;*/
+  }
+}
+article img {
+  height: 5rem;
+  width: 5rem;
+}
+nav {
   display: flex;
   background-color: grey;
 }
-ul li a {
-  display: block;
-  padding: 14px 16px;
+nav a {
+  text-align: center;
+  padding: 1rem;
+  border-right: 1px solid #ccc;
   text-decoration: none;
-  border-style: solid;
-  border-radius: 10;
-  border-color: white;
 }
-.container {
-  display: inline-grid;
+nav a:hover {
+  background-color: blue;
 }
